--- a/src/app/clientside/clientpages/landing_page/header/header.component.html
+++ b/src/app/clientside/clientpages/landing_page/header/header.component.html
@@ -11,6 +11,8 @@
       <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
       <a href="#" class="skype"><i class="icofont-skype"></i></a>
       <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
+      <a href="/custlogin" class="linkedin"><i class="icofont-login ml-1"></i>Login in</a>
+      <a href="#" class="linkedin"><i class="icofont-user"></i>Create</a>
     </div>
   </div>
 </section>
