--- a/src/app/AdminPanel/pages/root-header-master/add-edit-root-header/add-edit-root-header.component.html
+++ b/src/app/AdminPanel/pages/root-header-master/add-edit-root-header/add-edit-root-header.component.html
@@ -15,14 +15,14 @@
 
       <label class="col-sm-2 col-form-label">Root Name (Danish)<span class="warningclass">*</span></label>
       <div class="col-sm-4">
-        <input class="form-control" type="text" [(ngModel)]="rootHeaderObj.Root_Name_D" id="Root_Name_D" [ngModelOptions]="{standalone: true}">
+        <input class="form-control" type="text" [(ngModel)]="rootHeaderObj.Root_Name_D" id="Root_Name_D" [ngModelOptions]="{standalone: true}" >
       </div>
     </div>
 
     <div class="form-group row">
       <label class="col-sm-2 col-form-label">Display Seq No<span class="warningclass">*</span></label>
       <div class="col-sm-4">
-        <input class="form-control" type="number" [(ngModel)]="rootHeaderObj.Display_Seq_No" id="Display_Seq_No" [ngModelOptions]="{standalone: true}">
+        <input class="form-control" type="number" [(ngModel)]="rootHeaderObj.Display_Seq_No" id="Display_Seq_No" [ngModelOptions]="{standalone: true}" min="0" appOnlyNumber>
       </div>
       <label class="col-sm-2 col-form-label">Status</label>
       <div class="col-sm-4">
