--- a/src/app/clientside/clientpages/login_client/login_client.component.html
+++ b/src/app/clientside/clientpages/login_client/login_client.component.html
@@ -1,32 +1,46 @@
-<div class="col-md-6 offset-md-3 mt-5">
-  <div class="alert alert-info">
-      Username: test<br />
-      Password: test
-  </div>
-  <div class="card">
-      <h4 class="card-header">Welcome</h4>
-      <div class="card-body">
-          <!-- <form  [formGroup]="loginForm" (ngSubmit)="login()" #formDir="ngForm" novalidate>
+
+<body>
+  <div class="container">
+    <div class="row ml-lg-10 ml-md-10 ">
+      <div class="col-md-4" ></div>
+      <div class="col-md-offset-8 col-md-4 text-center">
+        <!-- <h1 class='text-white'>Prototype Login Form</h1> -->
+          <div class="form-login">
+            <h4>Login</h4>
+            <form  [formGroup]="loginForm" (ngSubmit)="login()" #formDir="ngForm">
               <div class="form-group">
-                  <label for="username">Username</label>
-                  <input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
-                  <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-                      <div *ngIf="f.username.errors.required">Username is required</div>
-                  </div>
-              </div>
-              <div class="form-group">
-                  <label for="password">Password</label>
-                  <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-                  <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                      <div *ngIf="f.password.errors.required">Password is required</div>
-                  </div>
-              </div>
-              <button [disabled]="loading" class="btn btn-primary">
+                <label for="username">Username</label>
+                <input type="text" formControlName="Email" id="Email" class="form-control" />
+                <div *ngIf="submitted && f.Email.errors" class="invalid-feedback">
+                    <div *ngIf="f.Email.errors.required">Username is required</div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" formControlName="Password"  id="Password"class="form-control" [ngClass]="{ 'is-invalid': submitted && f.Password.errors }" />
+                <div *ngIf="submitted && f.Password.errors" class="invalid-feedback">
+                    <div *ngIf="f.Password.errors.required">Password is required</div>
+                </div>
+            </div>
+
+            <span class="text-danger"  *ngIf="errorMessage != ''">
+              {{errorMessage}}
+             </span>
+             <div class="wrapper">
+              <span class="group-btn">
+                <button [disabled]="loading" class="btn btn-primary">
                   <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-                  Login
+                  Login <i class="fa fa-sign-in"></i>
               </button>
-              <div *ngIf="error" class="alert alert-danger mt-3 mb-0">{{error}}</div>
-          </form> -->
+              </span>
       </div>
+            </form>
+
+        </div>
+    </div>
+      <div class="col-md-4" ></div>
+
+    </div>
   </div>
-</div>
+</body>
+
