Category- Root Category

--- a/src/app/AdminPanel/pages/root-header-master/add-edit-root-header/add-edit-root-header.component.html
+++ b/src/app/AdminPanel/pages/root-header-master/add-edit-root-header/add-edit-root-header.component.html
@@ -22,7 +22,7 @@
     <div class="form-group row">
       <label class="col-sm-2 col-form-label">Display Seq No<span class="warningclass">*</span></label>
       <div class="col-sm-4">
-        <input class="form-control" type="number" [(ngModel)]="rootHeaderObj.Display_Seq_No" id="Display_Seq_No" [ngModelOptions]="{standalone: true}" min="0" appOnlyNumber>
+        <input class="form-control" type="number" [(ngModel)]="rootHeaderObj.Display_Seq_No" id="Display_Seq_No" [ngModelOptions]="{standalone: true}" min="0">
       </div>
       <label class="col-sm-2 col-form-label">Status</label>
       <div class="col-sm-4">
