--- a/src/app/AdminPanel/pages/category-master/add-edit-category/add-edit-category.component.html
+++ b/src/app/AdminPanel/pages/category-master/add-edit-category/add-edit-category.component.html
@@ -8,41 +8,41 @@
   <div>
 
     <div class="form-group row">
-      <label class="col-sm-2 col-form-label">Root Name<span class="warningclass">*</span></label>
+      <label class="col-sm-2 col-form-label">Root Category<span class="warningclass">*</span></label>
       <div class="col-sm-4">
-        <ng-select [(ngModel)]="rootCategoryObj.Root_Header_ID"  placeholder="Select Root"  id="Root_Header_ID"  [ngModelOptions]="{standalone: true}">
-          <ng-option *ngFor="let scat of RootList" [value]="scat.id"> {{scat.name}}</ng-option>
+        <ng-select [(ngModel)]="categoryObj.RCatg_ID"  placeholder="Select Root Category"  id="RCatg_ID"  [ngModelOptions]="{standalone: true}">
+          <ng-option *ngFor="let scat of CategoryList" [value]="scat.id"> {{scat.name}}</ng-option>
         </ng-select>
 
-        <!-- <select class="form-control" [(ngModel)]="rootCategoryObj.Root_Header_ID" id="Root_Header_ID"
+        <!-- <select class="form-control" [(ngModel)]="categoryObj.Root_Header_ID" id="Root_Header_ID"
           [ngModelOptions]="{standalone: true}">
-          <option *ngFor="let st of RootList; let i = index" [value]="st.id" >
+          <option *ngFor="let st of CategoryList; let i = index" [value]="st.id" >
             {{st.name}}
           </option>
         </select> -->
       </div>
-      <label class="col-sm-2 col-form-label">Root Category Name<span class="warningclass">*</span></label>
+      <label class="col-sm-2 col-form-label">Category Name<span class="warningclass">*</span></label>
       <div class="col-sm-4">
-        <input class="form-control" type="text" [(ngModel)]="rootCategoryObj.RCatg_Name" id="RCatg_Name" [ngModelOptions]="{standalone: true}">
+        <input class="form-control" type="text" [(ngModel)]="categoryObj.Catg_Name" id="Catg_Name" [ngModelOptions]="{standalone: true}">
       </div>
     </div>
 
     <div class="form-group row">
-      <label class="col-sm-2 col-form-label">Root Category Name (Danish)<span class="warningclass">*</span></label>
+      <label class="col-sm-2 col-form-label">Category Name (Danish)<span class="warningclass">*</span></label>
       <div class="col-sm-4">
-        <input class="form-control" type="text" [(ngModel)]="rootCategoryObj.RCatg_Name_D" id="RCatg_Name_D" [ngModelOptions]="{standalone: true}" >
+        <input class="form-control" type="text" [(ngModel)]="categoryObj.Catg_Name_D" id="Catg_Name_D" [ngModelOptions]="{standalone: true}" >
       </div>
 
       <label class="col-sm-2 col-form-label">Display Seq No<span class="warningclass">*</span></label>
       <div class="col-sm-4">
-        <input class="form-control" type="number" [(ngModel)]="rootCategoryObj.Display_Seq_No" id="Display_Seq_No" [ngModelOptions]="{standalone: true}" min="0">
+        <input class="form-control" type="number" [(ngModel)]="categoryObj.Display_Seq_No" id="Display_Seq_No" [ngModelOptions]="{standalone: true}" min="0">
       </div>
     </div>
 
     <div class="form-group row">
       <label class="col-sm-2 col-form-label">Status</label>
       <div class="col-sm-4">
-        <select class="form-control" [(ngModel)]="rootCategoryObj.Status" id="Status"
+        <select class="form-control" [(ngModel)]="categoryObj.Status" id="Status"
           [attr.disabled]="isInserted == 'I' ? 'disabled' : null" [ngModelOptions]="{standalone: true}">
           <option *ngFor="let st of StatusList; let i = index" [value]="st.id" >
             {{st.name}}
@@ -55,7 +55,7 @@
   <hr />
   <div class="text-center">
     <div class="form-group align-center">
-      <button type="submit" class="btn btn-success fa fa-check-square-o cursor-pointer" (click)="saveRootCategory()"> <span class="font-d">
+      <button type="submit" class="btn btn-success fa fa-check-square-o cursor-pointer" (click)="saveCategory()"> <span class="font-d">
           Save</span></button> &nbsp;
       <button class="btn btn-danger fa fa-remove cursor-pointer" (click)="cancel()"><span class="font-d">
           Cancel</span></button>
