--- a/src/app/AdminPanel/pages/category-master/category-list/category-list.component.html
+++ b/src/app/AdminPanel/pages/category-master/category-list/category-list.component.html
@@ -1,7 +1,7 @@
 
 <div class="row">
   <div class="col-sm-12">
-      <app-card [title]="'Root Category Master'" [classHeader]="true" [blockClass]="'table-border-style'">
+      <app-card [title]="'Category Master'" [classHeader]="true" [blockClass]="'table-border-style'">
         <div class="table-responsive">
             <p>
               <!-- <a class="btn btn-success float-right" [routerLink]="['/add-edit-item']">Add New</a>   -->
@@ -10,8 +10,7 @@
               <br/>
               <br/>
 
-            <p-table class="" #dt [value]="rootCategoryMaster" [(selection)]="selectedRootCategoryMaster" dataKey="id" [autoLayout]="true" styleClass="p-datatable-d" [rowHover]="true" [rows]="10" [showCurrentPageReport]="true" [rowsPerPageOptions]="[10,25,50]" [loading]="loading" [paginator]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [filterDelay]="0" [globalFilterFields]="['RCatg_Name','Root_Name','RCatg_Name_D']">
-
+            <p-table class="" #dt [value]="categoryMaster" [(selection)]="selectedCategoryMaster" dataKey="id" [autoLayout]="true" styleClass="p-datatable-d" [rowHover]="true" [rows]="10" [showCurrentPageReport]="true" [rowsPerPageOptions]="[10,25,50]" [loading]="loading" [paginator]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [filterDelay]="0" [globalFilterFields]="['Catg_Name','Catg_Name_D','RCatg_Name']">
               <ng-template pTemplate="caption">
                 <div class="table-header-p ">
                     <span class="p-input-icon-left">
@@ -24,20 +23,20 @@
               <br/>
               <ng-template pTemplate="header">
               <tr>
+                  <th pSortableColumn="Catg_Name">Category Name <p-sortIcon field="Catg_Name"></p-sortIcon></th>
+                  <th pSortableColumn="Catg_Name_D">Category Name (Danish) <p-sortIcon field="Catg_Name_D"></p-sortIcon></th>
                   <th pSortableColumn="RCatg_Name">Root Category Name <p-sortIcon field="RCatg_Name"></p-sortIcon></th>
-                  <th pSortableColumn="RCatg_Name_D">Root Category Name (Danish) <p-sortIcon field="RCatg_Name_D"></p-sortIcon></th>
-                  <th pSortableColumn="Root_Name">Root Name <p-sortIcon field="Root_Name"></p-sortIcon></th>
                   <th pSortableColumn="StatusDesc">Status <p-sortIcon field="StatusDesc"></p-sortIcon></th>
                   <th pSortableColumn="Deleted">IsDeleted <p-sortIcon field="Deleted"></p-sortIcon></th>
                   <th >Action </th>
               </tr>
               <tr>
                   <th>
-                  <input pInputText type="text" (input)="dt.filter($event.target.value, 'RCatg_Name', 'startsWith')" placeholder="Search by Category" class="form-control">
+                  <input pInputText type="text" (input)="dt.filter($event.target.value, 'Catg_Name', 'startsWith')" placeholder="Search by Category" class="form-control">
                   </th>
                 <th></th>
                   <th>
-                      <input pInputText type="text" (input)="dt.filter($event.target.value, 'Root_Name', 'contains')" placeholder="Search by Root" class="form-control">
+                      <input pInputText type="text" (input)="dt.filter($event.target.value, 'RCatg_Name', 'contains')" placeholder="Search by Root" class="form-control">
                   </th>
 
                   <th></th>
@@ -51,23 +50,23 @@
               <tr class="">  <!-- p-selectable-row  -->
 
                   <td>
-                        {{item.RCatg_Name}}
+                        {{item.Catg_Name}}
                   </td>
                   <td>
-                    {{item.RCatg_Name_D}}
+                    {{item.Catg_Name_D}}
                   </td>
                   <td>
-                    {{item.Root_Name}}
+                    {{item.RCatg_Name}}
               </td>
                   <td>
                         {{item.StatusDesc}}
                   </td>
                   <td style = "width: 220px;">
-                    {{item.Deleted}} <span *ngIf="item.Deleted =='Yes'"><button type="button" class="float-right btn btn-success text-white " (click) = "activateItem(item.RCatg_ID)">Make Active</button> </span>
+                    {{item.Deleted}} <span *ngIf="item.Deleted =='Yes'"><button type="button" class="float-right btn btn-success text-white " (click) = "activateItem(item.Catg_ID)">Make Active</button> </span>
                   </td>
                   <td>
-                          <a class="ti-pencil-alt edit" (click)="openEditPage(item.RCatg_ID)"></a>
-                          &nbsp;<a class=" ti-trash delete" (click)="deleteItem(item.RCatg_ID)"></a>
+                          <a class="ti-pencil-alt edit" (click)="openEditPage(item.Catg_ID)"></a>
+                          &nbsp;<a class=" ti-trash delete" (click)="deleteItem(item.Catg_ID)"></a>
                              <!-- &nbsp;<a class=" ti-eye view" (click)="deleteItem(item.Item_ID)"></a> -->
                   </td>
               </tr>
