--- a/src/app/clientside/clientpages/subcategory/subcategory.component.html
+++ b/src/app/clientside/clientpages/subcategory/subcategory.component.html
@@ -2,15 +2,15 @@
   <div id="content">
       <div class="container">
           <ul class="breadcrumb justify-content-md-end justify-content-center">
-              <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-              <li class="breadcrumb-item active">Ladies      </li>
+              <li class="breadcrumb-item"><a href="#">Home</a></li>
+              <li class="breadcrumb-item active">GROCERIES      </li>
           </ul>
           <div class="box text-center">
               <div class="row">
                   <div class="col-md-10 offset-md-1">
                       <h1>GROCERIES</h1>
                       <p class="text-muted">
-                        groceries  food and household supplies sold at a store. 2 : a store that sells food and household supplies.
+                        groceries  food and household supplies sold at a store that sells food and household supplies.
                       </p>
                   </div>
               </div>
