--- a/src/app/clientside/clientpages/landing_page/product/product.component.html
+++ b/src/app/clientside/clientpages/landing_page/product/product.component.html
@@ -55,6 +55,24 @@
                               <p class="card-text text-left  mb-0">Price: <span class="font-weight-bold float-right text-success">{{prod.Price}}</span></p>
 
                               <p class="card-text text-left">Stock left: <span class="font-weight-bold float-right text-danger">{{prod.Qty}}</span></p>
+
+                              <div class="F8dpS _3L1X9" *ngIf="prod.showaddbtn" (click)="toggleShow(prod)">
+                                <div  class="_1RPOp _1uN_a" (click)="addToCart(prod)" >ADD</div>
+                                <div class="_1ds9T _2WdfZ _4aKW6">+</div>
+                                <div class="_29Y5Z _20vNm _4aKW6"></div>
+                                <div class="_2zAXs _2quy- _4aKW6">0</div>
+                              </div>
+                              <div class="F8dpS _3L1X9" *ngIf="prod.showplusebtn">
+                                <div class="_1RPOp _36fT9 _4aKW6">ADD</div>
+                                <div class="_1ds9T _2Thnf" (click)="PluseQty(prod)" >+</div>
+                                <div class="_29Y5Z _2od4M" (click)="minuseQty(prod)">-</div>
+                                <div class="_2zAXs _18lJJ">{{prod.OrderQty}}</div>
+                              </div>
+                              <!-- <p class="text-center">
+
+                                <button type="submit" class="btn btn-outline-primary" (click)="addToCart(prod)" ><i class="fa fa-shopping-cart"></i></button>
+                                <button type="submit" data-toggle="tooltip" data-placement="top" title="Add to wishlist" class="btn btn-outline-secondary"><i class="fa fa-heart-o"></i></button>
+                             </p> -->
                               <!-- <p class="price">{{prod.Price}}</p>
                               <p class="price">{{prod.Qty}}</p> -->
                           </div>
