State and City Master by RG

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -484,9 +484,9 @@ img {
   float: left;
 }
 
-.modal {
-  z-index: 99999999999;
-}
+// .modal {
+//   z-index: 99999999999;
+// }
 
 .bd-example .modal {
   display: block;
