--- a/src/app/clientside/clientpages/landing_page/header/header.component.html
+++ b/src/app/clientside/clientpages/landing_page/header/header.component.html
@@ -31,7 +31,7 @@
                   <div class="nav-item"><a href="contact.html" class="nav-link">Contact</a></div>
               </div>
               <div class="d-none d-lg-block">
-                <a href="/custlogin"  class="mr-3"><i class="icofont-lock ml-1"></i>Login in</a>
+                <a href="/custlogin"  class="mr-3"><i class="icofont-lock ml-1"></i>{{username}}</a>
                 <a class="mr-3" href="/create-user"><i class="icofont-ui-user"></i>Create</a>
                 <a href="/shoppingcart" class="btn btn-outline-primary"><i class="fa fa-shopping-cart"></i><span class="hidden-sm">  {{(items$ | async).length}} items <span class="hidden-md">in cart   </span></span></a>
               </div>
