--- a/src/app/clientside/clientpages/landing_page/product/product.component.html
+++ b/src/app/clientside/clientpages/landing_page/product/product.component.html
@@ -56,6 +56,7 @@
 
                               <p class="card-text text-left">Stock left: <span class="font-weight-bold float-right text-danger">{{prod.Qty}}</span></p>
 
+
                               <div class="F8dpS _3L1X9" *ngIf="prod.showaddbtn" (click)="toggleShow(prod)">
                                 <div  class="_1RPOp _1uN_a" (click)="addToCart(prod)" >ADD</div>
                                 <div class="_1ds9T _2WdfZ _4aKW6">+</div>
@@ -79,8 +80,8 @@
                           <!-- /.text-->
 
                               <!-- /.text-->
-                              <div class="ribbon sale">
-                                <div class="theribbon">SALE</div>
+                              <div class="ribbon sale" style="top: -30px;">
+                                <div class="theribbon" (click)="onClickwhishlist(prod)"  ><i class="fa fa-heart-o" [ngClass]="{'active': prod.Activewishlist}"></i></div>
                                 <div class="ribbon-background"></div>
                             </div>
                             <!-- /.ribbon-->
