--- a/src/app/clientside/clientpages/login_client/login_client.component.html
+++ b/src/app/clientside/clientpages/login_client/login_client.component.html
@@ -26,14 +26,21 @@
             <span class="text-danger"  *ngIf="errorMessage != ''">
               {{errorMessage}}
              </span>
-             <div class="wrapper">
+             <div class="wrapper mb-3">
               <span class="group-btn">
                 <button [disabled]="loading" class="btn btn-primary">
                   <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                   Login <i class="fa fa-sign-in"></i>
               </button>
               </span>
-      </div>
+          </div>
+
+          <div class="wrapper">
+            <a href="/create-user" class="group-btn" style="color: aliceblue;">
+              <i class="icofont-ui-user"></i>
+                Create Profile
+            </a>
+        </div>
             </form>
 
         </div>
