--- a/src/app/clientside/clientpages/shoppingcart/shoppingcart.component.html
+++ b/src/app/clientside/clientpages/shoppingcart/shoppingcart.component.html
@@ -76,10 +76,10 @@
               </div>
               <!-- /.table-responsive-->
               <div class="box-footer">
-                <div class="pull-left"><a href="category.html" class="btn btn-outline-white-secondary"><i class="fa fa-chevron-left"></i> Continue shopping</a></div>
+                <div class="pull-left"><a href="#" class="btn btn-outline-white-secondary"><i class="fa fa-chevron-left"></i> Continue shopping</a></div>
                 <div class="pull-right">
                   <button class="btn btn-outline-white-secondary"><i class="fa fa-refresh"></i> Update cart</button>
-                  <button type="submit" class="btn btn-outline-white-primary">Proceed to checkout<i class="fa fa-chevron-right"></i></button>
+                  <button type="button" (click)="checkoutItem()" class="btn btn-outline-white-primary">Proceed to checkout<i class="fa fa-chevron-right"></i></button>
                 </div>
               </div>
           </div>
