shopping cart changes

--- a/src/app/clientside/clientpages/Main_landing_page/landing_page.component.html
+++ b/src/app/clientside/clientpages/Main_landing_page/landing_page.component.html
@@ -1,4 +1,4 @@
-<body id="main">
+<body id="main" class="Mianbody">
   <app-header *ngIf="showHeader"></app-header>
   <app-product *ngIf="showproduct"></app-product>
   <router-outlet></router-outlet>
