--- a/src/app/clientside/clientpages/landing_page/layoutclient/layoutclient.component.html
+++ b/src/app/clientside/clientpages/landing_page/layoutclient/layoutclient.component.html
@@ -1,4 +1,4 @@
-<body>
+<body class="Mianbody">
   <app-header *ngIf="showHeader"></app-header>
   <router-outlet></router-outlet>
   <app-footer *ngIf="showFooter"></app-footer>
