--- a/src/app/clientside/clientpages/landing_page/product/product.component.html
+++ b/src/app/clientside/clientpages/landing_page/product/product.component.html
@@ -46,7 +46,7 @@
                   <div class="col-md-3 col-sm-4" *ngFor='let prod of Item_Masters'>
                       <div class="product">
                           <div class="image">
-                              <a href="detail.html"><img src="/assets/img/imagesclient/img-product2.jpg" alt="" class="img-fluid image1"></a>
+                              <a href="detail.html"><img src="/assets/img/img/No-Image.jpg" alt="" class="img-fluid image1"></a>
                               <div class="quick-view-button"><a href="#" data-toggle="modal" data-target="#product-quick-view-modal" class="btn btn-outline-white-secondary btn-sm">Quick view</a></div>
                           </div>
                           <!-- /.image-->
@@ -101,7 +101,7 @@
                                   <button type="button" data-dismiss="modal" aria-hidden="true" class="close">&times;</button>
                                   <div class="row quick-view product-main">
                                       <div class="col-sm-6">
-                                          <div class="quick-view-main-image"><img src="/assets/img/imagesclient/img-detailbig1.jpg" alt="" class="img-fluid"></div>
+                                          <div class="quick-view-main-image"><img src="/assets/img/img/No-Image.jpg" alt="" class="img-fluid"></div>
                                           <div class="ribbon ribbon-quick-view sale">
                                               <div class="theribbon">SALE</div>
                                               <div class="ribbon-background"></div>
@@ -113,9 +113,9 @@
                                           </div>
                                           <!-- /.ribbon-->
                                           <div class="row thumbs">
-                                              <div class="col-4"><a href="img/detailbig1.jpg" class="thumb"><img src="/assets/img/imagesclient/img-detailsquare.jpg" alt="" class="img-fluid"></a></div>
+                                              <!-- <div class="col-4"><a href="img/detailbig1.jpg" class="thumb"><img src="/assets/img/imagesclient/img-detailsquare.jpg" alt="" class="img-fluid"></a></div>
                                               <div class="col-4"><a href="img/detailbig2.jpg" class="thumb"><img src="/assets/img/imagesclient/img-detailsquare2.jpg" alt="" class="img-fluid"></a></div>
-                                              <div class="col-4"><a href="img/detailbig3.jpg" class="thumb"><img src="/assets/img/imagesclient/img-detailsquare3.jpg" alt="" class="img-fluid"></a></div>
+                                              <div class="col-4"><a href="img/detailbig3.jpg" class="thumb"><img src="/assets/img/imagesclient/img-detailsquare3.jpg" alt="" class="img-fluid"></a></div> -->
                                           </div>
                                       </div>
                                       <div class="col-sm-6">
