--- a/src/app/clientside/clientpages/shoppingcart/shoppingcart.component.html
+++ b/src/app/clientside/clientpages/shoppingcart/shoppingcart.component.html
@@ -34,7 +34,7 @@
             </tr>
             <ng-container *ngFor="let product of Item_Master_;" >
               <tr *ngIf="shppingcart1.name == product.CategoryName" [id]="product.Item_ID">
-                      <td><a href="#"><img src="https://d19m59y37dris4.cloudfront.net/minimal/2-1-1/img/detailsquare.jpg" alt="White Blouse Armani"></a></td>
+                      <td><a href="#"><img src="/assets/img/img/No-Image.jpg" alt="White Blouse Armani"></a></td>
                       <td><a href="#">{{product.Item_Name}}</a></td>
                       <td>
                         <!-- Change the `data-field` of buttons and `name` of input field's for multiple plus minus buttons-->
@@ -92,7 +92,7 @@
             </div>
             <div class="col-md-3">
               <div class="product">
-                <div class="image"><a href="detail.html"><img src="https://d19m59y37dris4.cloudfront.net/minimal/2-1-1/img/product2.jpg" alt="" class="img-fluid image1"></a></div>
+                <div class="image"><a href="detail.html"><img src="/assets/img/img/No-Image.jpg" alt="" class="img-fluid image1"></a></div>
                 <div class="text">
                   <h3><a href="detail.html">Fur coat</a></h3>
                   <p class="price">$143</p>
@@ -102,7 +102,7 @@
             </div>
             <div class="col-md-3">
               <div class="product">
-                <div class="image"><a href="detail.html"><img src="https://d19m59y37dris4.cloudfront.net/minimal/2-1-1/img/product3.jpg" alt="" class="img-fluid image1"></a></div>
+                <div class="image"><a href="detail.html"><img src="/assets/img/img/No-Image.jpg" alt="" class="img-fluid image1"></a></div>
                 <div class="text">
                   <h3><a href="detail.html">Fur coat</a></h3>
                   <p class="price">$143</p>
@@ -112,7 +112,7 @@
             </div>
             <div class="col-md-3">
               <div class="product">
-                <div class="image"><a href="detail.html"><img src="https://d19m59y37dris4.cloudfront.net/minimal/2-1-1/img/product1.jpg" alt="" class="img-fluid image1"></a></div>
+                <div class="image"><a href="detail.html"><img src="/assets/img/img/No-Image.jpg" alt="" class="img-fluid image1"></a></div>
                 <div class="text">
                   <h3><a href="detail.html">Fur coat</a></h3>
                   <p class="price">$143</p>
