--- a/src/app/clientside/clientpages/subcategory/subcategory.component.html
+++ b/src/app/clientside/clientpages/subcategory/subcategory.component.html
@@ -199,7 +199,7 @@
                     <div class="col-md-4 col-sm-6" *ngFor='let item4  of Item_Masters; let isFirst = firstl'>
                       <div class="product">
                           <div class="image">
-                              <a href="detail.html"><img src="https://d19m59y37dris4.cloudfront.net/minimal/2-1-1/img/product2.jpg" alt="" class="img-fluid image1"></a>
+                              <a><img src="/assets/img/img/No-Image.jpg" alt="" class="img-fluid image1"></a>
                               <div class="quick-view-button"><a href="#" data-toggle="modal" data-target="#product-quick-view-modal" class="btn btn-outline-white-secondary btn-sm">Quick view</a></div>
                           </div>
                           <!-- /.image-->
@@ -256,7 +256,7 @@
                                       <button type="button" data-dismiss="modal" aria-hidden="true" class="close">×</button>
                                       <div class="row quick-view product-main">
                                           <div class="col-sm-6">
-                                              <div class="quick-view-main-image"><img src="https://d19m59y37dris4.cloudfront.net/minimal/2-1-1/img/detailbig1.jpg" alt="" class="img-fluid"></div>
+                                              <div class="quick-view-main-image"><img src="/assets/img/img/No-Image.jpg" alt="" class="img-fluid"></div>
                                               <div class="ribbon ribbon-quick-view sale">
                                                   <div class="theribbon">SALE</div>
                                                   <div class="ribbon-background"></div>
@@ -268,9 +268,9 @@
                                               </div>
                                               <!-- /.ribbon-->
                                               <div class="row thumbs">
-                                                  <div class="col-4"><a href="img/detailbig1.jpg" class="thumb"><img src="https://d19m59y37dris4.cloudfront.net/minimal/2-1-1/img/detailsquare.jpg" alt="" class="img-fluid"></a></div>
+                                                  <!-- <div class="col-4"><a href="img/detailbig1.jpg" class="thumb"><img src="https://d19m59y37dris4.cloudfront.net/minimal/2-1-1/img/detailsquare.jpg" alt="" class="img-fluid"></a></div>
                                                   <div class="col-4"><a href="img/detailbig2.jpg" class="thumb"><img src="https://d19m59y37dris4.cloudfront.net/minimal/2-1-1/img/detailsquare2.jpg" alt="" class="img-fluid"></a></div>
-                                                  <div class="col-4"><a href="img/detailbig3.jpg" class="thumb"><img src="https://d19m59y37dris4.cloudfront.net/minimal/2-1-1/img/detailsquare3.jpg" alt="" class="img-fluid"></a></div>
+                                                  <div class="col-4"><a href="img/detailbig3.jpg" class="thumb"><img src="https://d19m59y37dris4.cloudfront.net/minimal/2-1-1/img/detailsquare3.jpg" alt="" class="img-fluid"></a></div> -->
                                               </div>
                                           </div>
                                           <div class="col-sm-6">
